ligolang/src/test/contracts/negative/invalid_field_record_update.mligo
type abc = {a : int; b : int; c : int}

let main (p:int) (storage : abc) =
  (([] : operation list) , { storage with nofield=2048} )